--- a/sysroot/windows/BUILD
+++ b/sysroot/windows/BUILD
@@ -1,7 +1,7 @@
 load("@bazel_skylib//rules/directory:directory.bzl", "directory")
 load("@bazel_skylib//rules/directory:subdirectory.bzl", "subdirectory")
 load("@windows-sysroot-x86_64//:msvcrt-headers.bzl", "MSVCRT_HEADERS_OUTS")
-load("@windows-sysroot-x86_64//:ucrt-headers.bzl", "UCRT_HEADERS_OUTS")
+load("@windows-sysroot-x86_64//:ucrt.bzl", "UCRT_OUTS")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -14,10 +14,10 @@ genrule(
 )
 
 genrule(
-    name = "ucrt-headers",
-    srcs = ["@windows-sysroot-x86_64//:ucrt-headers.tar.xz"],
-    outs = UCRT_HEADERS_OUTS,
-    cmd_bat = "tar xvf $(location @windows-sysroot-x86_64//:ucrt-headers.tar.xz) -C $(RULEDIR)",
+    name = "ucrt",
+    srcs = ["@windows-sysroot-x86_64//:ucrt.tar.xz"],
+    outs = UCRT_OUTS,
+    cmd_bat = "tar xvf $(location @windows-sysroot-x86_64//:ucrt.tar.xz) -C $(RULEDIR)",
     tags = ["no-remote-cache"],
 )
 
@@ -25,7 +25,7 @@ directory(
     name = "root",
     srcs = [
         ":msvcrt-headers",
-        ":ucrt-headers",
+        ":ucrt",
     ],
 )
 
@@ -33,4 +33,10 @@ subdirectory(
     name = "include",
     parent = ":root",
     path = "include",
+)
+
+subdirectory(
+    name = "lib",
+    parent = ":root",
+    path = "lib",
 )
