Add windows shared headers

--- a/sysroot/windows/BUILD
+++ b/sysroot/windows/BUILD
@@ -3,6 +3,7 @@ load("@bazel_skylib//rules/directory:subdirectory.bzl", "subdirectory")
 load("@windows-sysroot-x86_64//:msvcrt-headers.bzl", "MSVCRT_HEADERS_OUTS")
 load("@windows-sysroot-x86_64//:ucrt.bzl", "UCRT_OUTS")
 load("@windows-sysroot-x86_64//:windows-sdk-headers.bzl", "WINDOWS_SDK_HEADERS_OUTS")
+load("@windows-sysroot-x86_64//:windows-shared-headers.bzl", "WINDOWS_SHARED_HEADERS_OUTS")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -30,12 +31,21 @@ genrule(
     tags = ["no-remote-cache"],
 )
 
+genrule(
+    name = "windows-shared-headers",
+    srcs = ["@windows-sysroot-x86_64//:windows-shared-headers.tar.xz"],
+    outs = WINDOWS_SHARED_HEADERS_OUTS,
+    cmd_bat = "tar xvf $(location @windows-sysroot-x86_64//:windows-shared-headers.tar.xz) -C $(RULEDIR)",
+    tags = ["no-remote-cache"],
+)
+
 directory(
     name = "root",
     srcs = [
         ":msvcrt-headers",
         ":ucrt",
         ":windows-sdk-headers",
+        ":windows-shared-headers",
     ],
 )
 
