--- a/args/windows/BUILD
+++ b/args/windows/BUILD
@@ -7,7 +7,7 @@ cc_args_list(
         ":no_canonical_prefixes",
         ":nostd",
         # ":nostd++",
-        #":nostd_link",
+        ":nostd_link",
         ":isystem",
         ":link-general",
         # ":link-executable",
@@ -51,20 +51,20 @@ cc_args(
 #     visibility = ["//visibility:public"],
 # )
 
-# cc_args(
-#     name = "nostd_link",
-#     actions = [
-#         "@rules_cc//cc/toolchains/actions:link_actions",
-#     ],
-#     args = [
-#         "-nostdinc",
-#         "-nostdlib",
-#         "-nodefaultlibs",
-#         "-nostdinc++",
-#         "-nostdlib++",
-#     ],
-#     visibility = ["//visibility:public"],
-# )
+cc_args(
+    name = "nostd_link",
+    actions = [
+        "@rules_cc//cc/toolchains/actions:link_actions",
+    ],
+    args = [
+        "-nostdinc",
+        "-nostdlib",
+        "-nodefaultlibs",
+        "-nostdinc++",
+        "-nostdlib++",
+    ],
+    visibility = ["//visibility:public"],
+)
 
 cc_args(
     name = "isystem",
