--- a/sysroot/windows/BUILD
+++ b/sysroot/windows/BUILD
@@ -11,7 +11,7 @@ genrule(
     name = "msvcrt-headers",
     srcs = ["@windows-sysroot-x86_64//:msvcrt-headers.tar.gz"],
     outs = MSVCRT_HEADERS_OUTS,
-    cmd_bat = "tar xf $(location @windows-sysroot-x86_64//:msvcrt-headers.tar.gz) -C $(RULEDIR)",
+    cmd_bat = "mkdir $(RULEDIR) & tar xf $(location @windows-sysroot-x86_64//:msvcrt-headers.tar.gz) -C $(RULEDIR)",
     tags = ["no-remote-cache"],
 )
 
@@ -19,7 +19,7 @@ genrule(
     name = "ucrt",
     srcs = ["@windows-sysroot-x86_64//:ucrt.tar.gz"],
     outs = UCRT_OUTS,
-    cmd_bat = "tar xf $(location @windows-sysroot-x86_64//:ucrt.tar.gz) -C $(RULEDIR)",
+    cmd_bat = "mkdir $(RULEDIR) & tar xf $(location @windows-sysroot-x86_64//:ucrt.tar.gz) -C $(RULEDIR)",
     tags = ["no-remote-cache"],
 )
 
@@ -27,7 +27,7 @@ genrule(
     name = "windows-sdk-headers",
     srcs = ["@windows-sysroot-x86_64//:windows-sdk-headers.tar.gz"],
     outs = WINDOWS_SDK_HEADERS_OUTS,
-    cmd_bat = "tar xf $(location @windows-sysroot-x86_64//:windows-sdk-headers.tar.gz) -C $(RULEDIR)",
+    cmd_bat = "mkdir $(RULEDIR) & tar xf $(location @windows-sysroot-x86_64//:windows-sdk-headers.tar.gz) -C $(RULEDIR)",
     tags = ["no-remote-cache"],
 )
 
@@ -35,7 +35,7 @@ genrule(
     name = "windows-shared-headers",
     srcs = ["@windows-sysroot-x86_64//:windows-shared-headers.tar.gz"],
     outs = WINDOWS_SHARED_HEADERS_OUTS,
-    cmd_bat = "tar xf $(location @windows-sysroot-x86_64//:windows-shared-headers.tar.gz) -C $(RULEDIR)",
+    cmd_bat = "mkdir $(RULEDIR) & tar xf $(location @windows-sysroot-x86_64//:windows-shared-headers.tar.gz) -C $(RULEDIR)",
     tags = ["no-remote-cache"],
 )
 
